Fix autocomplete in message compose by making oninput start off enabled, and just disabling it within SetValue.  Bug 282645, r= (and lots of ideas from) neil, sr=bzbarsky.